fixed overlap issue

--- a/css/sheq.css
+++ b/css/sheq.css
@@ -64,5 +64,5 @@ body {
 }
 
 .splashJumbo{
-  margin-top: 100px;
+  margin-top: 20%;
 }
